fixing layout on mobile views

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -3,8 +3,10 @@
   max-width: 760px;
   margin: 60px auto;
   padding: 50px;
-    margin-top: 200px;
-
+  margin-top: 200px;
+  background: url("../templates/res.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #4b2e1e;
 
   color: #eaeaea;
