--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -15,7 +15,8 @@
   }
 }
 
-body {
+body,html {
+
   /* 4. Add accessible line-height */
   line-height: 1.5;
   /* 5. Improve text rendering */
