--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -53,21 +53,15 @@ button:hover {
 }
 
 .image-overlay {
+  height: 100%;
+
   position: relative;
-  width: 100%;
-  height: 100%;
+  
 }
-img {
-  width: 100%;
-  height: 100%;
+.image-overlay img {
+  width: 100vw;
+  height: 100vh;
   object-fit: cover;
-}
-#content {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .image-overlay::after {
@@ -92,8 +86,3 @@ img {
   max-width: 700px;
   gap: 15px;
 }
-.button-menu {
-  padding: 30px 30px;
-  font-size: 1.5rem;
-}
-
