--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,25 +1,29 @@
 /* Menu Page Container */
-.menu-section {
-  max-width: 700px;
-  margin-top: 200px;
-  padding: 50px;
 
-  padding-top: 100px;
-  background-color: #4b2e1e;
-  color: #f5f5f5;
-  border-radius: 100px;
-  
-}
-#content {
+.menu-container {
   background: url("../templates/res.jpg");
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.menu-section {
+  max-width: 700px;
+  padding: 50px;
+  background-color: rgba(75, 46, 30, 0.9);
+  color: #f5f5f5;
+  border-radius: 100px;
+  margin-top: 200px;
 }
 
 /* Main Title */
 .menu-section h1 {
-  font-size: 3rem;
+  font-size: 2rem;
   text-align: center;
   margin-bottom: 20px;
   letter-spacing: 2px;
@@ -68,4 +72,7 @@
   color: #f4c430;
   transform: translateX(5px);
   transition: all 0.2s ease;
+}
+.button-menu {
+  padding: 20px;
 }
